--- a/signup_page.html
+++ b/signup_page.html
@@ -12,14 +12,15 @@
     <h2> sign up here </h2>  <!--sign up ka requared content diya hai yha -->
     <p>Name :</p><input type="text" name="name" id="name"></p>
     <p>email :<input type="email" name="email" id="email"></p>
-    <p>state :<input type="state" name="state" id="state"></p>
-    <p>distic :<input type="distic" name="distic" id="distic"></p>
-    <p>town :<input type="town" name="town" id="town"></p>
+    <p>state :<input type="text" name="state" id="state"></p>
+    <p>distic :<input type="text" name="distic" id="distic"></p>
+    <p>favrate game :<input type="text" name="town" id="game"></p>
     <p>create password : <input type="password" name="password" id="password"></p>
-    <p>confirm password : <input type="password" name="password" id="password"></p>
+    <p>confirm password : <input type="password" name="pass" id="pass"></p>
     <button class="btn" ><a href="#">signup</a></button>  <!-- # ke jga pe link dalna hai pta nhi kha ka filhal-->
   </div>
-</div>  
+</div> 
+<script  src="sighup.js"></script> 
 <body>
     
 </body>
